[package]
name = "water"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
starknet = "0.9.0"
serde_json = "1.0.116"
serde = "1.0.198"
log = "0.4.21"
